# autostan

./: .gitignore  README.md  model.stan  program.md  pyproject.toml  setup_permissions.sh
.claude/: settings.json
analysis/: all_runs.jsonl  collect_results.py  plot_trajectories.py  tabpfn_1d_regression.md  tabpfn_1d_regression.py
datasets/bundesliga_labeled/: dataset.md  train.csv
datasets/regression_1d/: dataset.md  train.csv
datasets/regression_1d_large/: dataset.md  train.csv
datasets/synthetic_hierarchical_large/: dataset.md  train.csv
datasets/synthetic_hierarchical_small/: dataset.md  train.csv
datasets/synthetic_regression/: dataset.md  train.csv
models/: README.md
models/bundesliga_labeled/: baseline.stan  iter_001.stan  iter_002.stan  iter_003.stan  iter_004.stan  iter_005.stan  iter_006.stan  iter_007.stan  iter_008.stan  iter_009.stan  iter_010.stan  iter_011.stan  iter_012.stan
models/regression_1d/: baseline.stan  best.stan  iter_001.stan  iter_002.stan  iter_003.stan  iter_004.stan  iter_006.stan  iter_007.stan  iter_008.stan
models/regression_1d_large/: baseline.stan  best.stan  iter_001.stan  iter_002.stan  iter_003.stan  iter_004.stan  iter_005.stan  iter_006.stan  iter_007.stan  iter_008.stan  iter_009.stan  iter_010.stan  iter_012.stan  iter_013.stan
models/synthetic_hierarchical_large/: baseline.stan  iter_001.stan  iter_002.stan  iter_003.stan  iter_004.stan  iter_005.stan  (+2 more)
paper/: plot_annotated_trajectory.py  plot_bundesliga.py  plot_figure1.py  plot_figure1_large.py  plot_regression_1d.py  plot_regression_1d_large.py
(+48 files in other folders)
